--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -3,9 +3,18 @@
 
 
 .site-head-logo img {
-    height: 56px!important;
+    height: 56px;
 }
 
 h1, h2, h3 {
     font-family: var(--font-serif);
+}
+
+@media (max-width: 850px) {
+    .site-head-container {
+        height: 56px;
+    }
+    .site-head-logo img {
+        height: 42px;
+    }
 }
